 *  documentation pages. It is not a project source file.
 */

 /** \page Page_ChangeLog Project Changelog
  *
  *  \section Sec_ChangeLogXXXXXX Version XXXXXX
  *  <b>New:</b>
  *  - Core:
  *   - Added USE_LUFA_CONFIG_HEADER compile time option to include a LUFAConfig.h header in the user director for LUFA configuration
  *     tokens as an alternative to tokens defined in the project makefile
  *   - Added new RNDIS Device Classs Driver packet send and receive functions
  *  - Library Applications:
  *   - Added new MediaControl project
  *   - Added new incomplete AndroidAccessoryHost Host LowLevel demo
  *   - Added RNDIS device mode to the Webserver project
  *
  *  <b>Changed:</b>
  *  - Core:
  *   - <i>None</i>
  *  - Library Applications:
  *   - <i>None</i>
  *
  *  <b>Fixed:</b>
  *  - Core:
  *   - <i>None</i>
  *  - Library Applications:
  *   - <i>None</i>
  *
  *  \section Sec_ChangeLog110528 Version 110528
  *  <b>New:</b>
  *  - Core:
  *   - Added new ORDERED_EP_CONFIG compile time option to restrict endpoint/pipe configuration to ascending order
  *     in exchange for a smaller compiled program binary size
  *   - Added a new general RingBuff.h miscellaneous ring buffer library driver header
  *   - Added new GCC_FORCE_POINTER_ACCESS() macro to correct GCC's mishandling of struct pointer accesses
  *   - Added new GCC_MEMORY_BARRIER() macro to prevent instruction reordering across boundaries
  *   - Added basic driver example use code to the library documentation
  *   - Added new Endpoint_Null_Stream() and Pipe_Null_Stream() functions
  *   - Added new ADC_GET_CHANNEL_MASK() convenience macro
  *   - Added new HID report item macros (with HID_RI_ prefix) to allow for easy creation and editing of HID report descriptors
  *   - Added new HID_DESCRIPTOR_MOUSE(), HID_DESCRIPTOR_KEYBOARD(), HID_DESCRIPTOR_JOYSTICK() and HID_DESCRIPTOR_VENDOR() macros
  *     for easy automatic creation of basic USB HID device reports